--- a/sections/03-accelerate.tex
+++ b/sections/03-accelerate.tex
@@ -1011,7 +1011,7 @@ languages of both Obsidian and Nikola are severely restricted. Both are limited
 to a single computation over one dimensional vectors, whereas Accelerate
 supports multidimensional arrays and computations can span many kernels. Due to
 its compilation method, Nikola only supports @map@-like functions, while
-Obsidian is able to encode more complex operations such as @scan@, due to its
+Obsidian is able to encode more complex operations such as @scan@ because its
 lower level interface that exposes more details of the GPU hardware.
 
 
