sec 7: nuke the related work section
Related work is covered in the respective chapters. I can't think of any general remarks at this time...

--- a/sections/07-conclusion.tex
+++ b/sections/07-conclusion.tex
@@ -173,11 +173,14 @@ processor thread and memory hierarchy, which is of crucial importance to
 achieving high performance.
 
 
-\section{Related work}
 
-Previous chapters have already covered related work of special relevance to the
-topics presented in their respective chapters. I refer readers to those
-chapters, and simply make some general remarks here.
+% \section{Related work}
+%
+% Previous chapters have already covered related work of special relevance to the
+% topics presented in their respective chapters. I refer readers to those
+% chapters, and simply make some general remarks here.
+%
+% but I have nothing to say...
 
 
 \section{Future work}
