--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -55,7 +55,7 @@ and requires a substantial degree of expert knowledge.
 Several researchers have proposed methods to ameliorate the status quo by either
 using a library to compose GPU code or by compiling a subset of a high-level
 language to low-level GPU
-code~\cite{McCool:2004,Bond:2010bd,ThrustAParallelT:ub,Catanzaro:2011cn,Mainland:2010vj,CLyther:EvXSiruK}
+code~\cite{McCool:2004,Bond:2010bd,ThrustAParallelT:ub,Catanzaro:2011cn,Mainland:2010vj,CLyther:EvXSiruK,Muranushi:2012eh}
 This work is in the same spirit: we propose a domain-specific high-level
 language of array computations, called \emph{Accelerate}, that captures
 appropriate GPGPU programming idioms in the form of parameterised, collective
@@ -64,32 +64,31 @@ array operations. Our choice of operations was informed primarily by the
 range of algorithms and can be efficiently implemented on modern
 GPUs~\cite{Sengupta:2007tc}.
 
-In summary, our main contributions are the following:
+In summary, the main contributions are the following:
 %
 \begin{itemize}
-    \item An embedded language, \emph{Accelerate}, of parameterised collective
-        array computations that is more expressive than previous GPGPU proposals
-        (Section~\ref{sec:accelerate}).
+    \item We propose an embedded language, \emph{Accelerate}, of parameterised
+        collective array computations that is more expressive than previous
+        GPGPU proposals (Section~\ref{sec:accelerate}).
 
-    \item A dynamic code generator based on CUDA skeletons of collective array
-        operations that are instantiated at runtime
-        (Sections~\ref{sec:parallel_algorithms_in_cuda},
-        \ref{sec:code_generation}, \&
-        \ref{sec:instantiating_skeletons}).
+    \item I implement a dynamic code generator based on CUDA skeletons of
+        collective array operations that are instantiated at runtime
+        (\ref{sec:code_generation}, \& \ref{sec:instantiating_skeletons}).
 
-    \item An execution engine that caches previously compiled skeleton instances
-        and host-to-device data transfers, as well as parallelises code
-        generation, data transfer, and GPU kernel loading and configuration
-        (Sections~\ref{sec:dynamic_compilation},
+    \item I implement an execution engine that caches previously compiled
+        skeleton instances and host-to-device data transfers, as well as
+        parallelises code generation, data transfer, and GPU kernel loading,
+        configuration, and execution (Sections~\ref{sec:dynamic_compilation},
         \ref{sec:memory_management}, \&
         \ref{sec:executing_programs}).
 
-    \item A novel sharing recovery algorithm for type-safe ASTs, preserving the
-        structure of the deeply embedded program
+    \item We introduce a novel sharing recovery algorithm for type-safe ASTs,
+        preserving the structure of the deeply embedded program
         (Section~\ref{sec:sharing_recovery}).
 
-    \item Type preserving optimisations of embedded array language programs,
-        including a novel approach to array fusion % as well as scalar simplifications
+    \item I introduce type preserving optimisations of embedded array language
+        programs, including a novel approach to array fusion
+        % as well as scalar simplifications
         (Sections~\ref{sec:manipulating_embedded_programs},
         \ref{sec:array_fusion}, \&
         \ref{sec:simplification}).
@@ -101,9 +100,10 @@ In summary, our main contributions are the following:
 Although we motivate and evaluate our work in the context of the Accelerate
 language, our contributions are not limited to this context. Specifically, our
 sharing recovery algorithm applies to any embedded language based on the typed
-lambda calculus and our approach to array fusion applies to any dynamic compiler
-targeting bulk-parallel SIMD hardware. Our current implementation targets CUDA,
-but the same approach works for OpenCL, as well as traditional CPUs.
+lambda calculus and my approach to array fusion applies to any dynamic compiler
+targeting bulk-parallel SIMD hardware. The current implementation targets CUDA,
+but the same approach works for OpenCL, as well as traditional CPU programming
+languages such as C and LLVM.
 
 Our results show that Accelerate programs can be competitive with programs
 hand-written in CUDA, while having a much higher level of abstraction.
