sec 6: caption wibble (missing short text)

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -199,10 +199,10 @@ Ray
 \bottomrule
 
     \end{tabu}
-    \caption{Code generation and compilation times for the benchmark programs.
-        Kernels are compiled concurrently, one per core, as is done by the
-        Accelerate runtime system. The equivalent sequential compilation time is
-        shown in parenthesis.}
+    \caption[Benchmark code generation and compilation times]{Code generation
+        and compilation times for the benchmark programs. Kernels are compiled
+        concurrently, one per core, as is done by the Accelerate runtime system.
+        The equivalent sequential compilation time is shown in parenthesis.}
     \label{tab:compilation_times}
 \end{table}
 
